deployment/mpp/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: template-ui
  labels:
    app: template-ui
    component: ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: template-ui
      component: ui
  template:
    metadata:
      labels:
        app: template-ui
        component: ui
    spec:
      containers:
        - name: template-ui
          image: template-ui:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
      restartPolicy: Always
